# army-claw

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: pyproject.toml
backend/openclaw/: __main__.py  agent_execution_queue.py  agent_plan_store.py  agent_planner.py  config.py  hancom_environment.py  health.py  hwpx_tools.py  local_llm_bundle.py  main.py  presentation_tools.py  skill_registry.py  workspace.py  xlsx_tools.py
backend/openclaw/providers/: __init__.py  base.py  ollama.py  openai_compatible.py
backend/tests/: test_agent_execution_queue.py  test_agent_execution_queue_api.py  test_agent_plan_api.py  test_agent_plan_store.py  test_agent_planner.py  test_config.py  test_hancom_environment.py  test_health.py  test_hwpx_tools.py  test_local_llm_bundle.py  test_ollama_provider.py  test_openai_compatible_provider.py  test_presentation_tools.py  test_skill_registry.py  test_workspace.py  test_xlsx_tools.py
config/: openclaw.config.example.json
docs/: agent-skill-context.md  hancom-viewer-validation.md  handoff-next-steps.md  hwpx-template-authoring-guide.md  local-llm-bundle.md  offline-build-env.md  openclaw-full-replacement-plan.md  openclaw-hancom-hwpx-tool-contract.md  openclaw-project-status.md  openclaw-reference-roadmap.md  progress-log.md  skill-management.md
frontend/: index.html  package.json  pnpm-lock.yaml
installer/: army-claw-core.iss  army-claw-openclaw-beta.iss
requirements/: build.txt
scripts/: bootstrap-build-env.bat  bootstrap-build-env.ps1  dev-backend.ps1  dev-frontend.ps1  export-local-llm-bundle.bat  (+13 more)
(+1439 files in other folders)
